More robust domain name parsing